--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/nothink/nothink.jp/issues"
   },
   "dependencies": {
+    "@micalgenus/gatsby-plugin-github-avatar": "^0.0.18",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-feed": "^2.3.23",
@@ -33,6 +34,7 @@
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
+    "typography-theme-japanese-tofu": "^0.0.1",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
